--- a/IngressoMVC/Views/Filmes/Detalhes.cshtml
+++ b/IngressoMVC/Views/Filmes/Detalhes.cshtml
@@ -1,3 +1,46 @@
-﻿@model Filme
+﻿@model IngressoMVC.Models.ViewModels.RequestDTO.PostFilmeDTO
 
- 
+<div class="row">
+    <div class="col-md-2">
+        <img class="img-thumbnail" src="@Model.ImageURL" />
+    </div>
+    <div class="col-md-10">
+        <h1>@Model.Titulo</h1>
+        <p>@Model.Descricao</p>
+    </div>
+
+</div>
+
+{
+    <div class="row">
+        <div id="carouselExampleControls" class="carousel slide col-md-4 offset-md-4" data-ride="carousel">
+            <div class="carousel-inner">
+                @foreach (var filme in @Model.ImageURL)
+                {
+                    if (filme == @Model.ImageURL.First())
+                    {
+                        <div class="carousel-item active">
+                            <img src="@filme" class="d-block w-100">
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="carousel-item">
+                            <img src="@filme" class="d-block w-100">
+                        </div>
+                    }
+                }
+            </div>
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </button>
+        </div>
+    </div>
+}
+@* Fim Carrossel*@
+
